# nemulate

./: README.md  checkps.md  convlstm.py  launch_pretrain.sh  prepare.sh  pyproject.toml
benches/: benchmark_dataloader.py  benchmark_dataloader.sh  benchmark_dataset.py
conf/: train_encoder.yaml
docs/: preparing_data.md
nemulate/: configs.py  datasets.py  plot.py
nemulate/data/: __init__.py  bases.py  organize.py  regrid.py  sources.py  transforms.py
nemulate/models/: __init__.py  coders.py  convlstm.py  fcnet.py  gcast.py  inverted_earth.py  ogcast.py  utils.py
nemulate/models/layers/: convs.py  gcnconv.py  ginconv.py  graph.py  layers.py  mask_convs.py
nemulate/process/: average.py  grid_stack.py  interpolate.py  mesh.py  preprocess.py  uv_tau.py
nemulate/utils/: math.py  train.py
nemulate/visualize/: plots.py
scripts/: 00_prepare_data.py  01_compute_forced_moments.py  02_regrid_data.py  04_batch_regrid_ocean_only.py  04_compute_stats.py  04_plot_regrid.py  05_train_encoder.py  benchmark_dataloader.py
tests/: test_dataset.py
