[project]
name = "nemulate"
version = "0.1.0"
description = "Neural Emulation of Climate Models"
authors = [
    {name = "Ayoub G.",email = "research@ayghri.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "cftime (>=1.6.4.post1,<2.0.0)",
    "xarray (>=2025.10.0,<2026.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "cartopy (>=0.25.0,<0.26.0)",
    "numpy (==2.2.0)",
    "xesmf (>=0.8.10,<0.9.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "pyshtools (>=4.13.1,<5.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "dask[distributed] (>=2025.10.0,<2026.0.0)",
    "click (>=8.1.7,<9.0.0)",
    "wandb (>=0.23.1,<0.24.0)",
    "sphedron @ git+https://github.com/ayghri/sphedron.git",
    "hydra-core (>=1.3.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "nemulate", from = "./"}]


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipywidgets = "^8.1.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
